--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,49 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+.skeleton{
+  opacity: 0.7;
+  animation: skeleton-loading 0.6s linear infinite alternate;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.skeleton-text{
+  width: 100%;
+  height: 0.6rem;
+  border-radius: 0.125rem;
+}
+heading{
+  height: 0.9rem;
+}
+
+@keyframes skeleton-loading{
+  0%{
+    background-color: hsl(200, 20%, 55%);
+  }
+  100%{
+    background-color: hsl(200, 20%, 95%);
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.loader {
+  width: 48px;
+  height: 48px;
+  background: #fff;
+  animation: rotate 1s linear infinite;
 }
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg) scale(0.2);
+    border-radius: 10%;
+  }
+  50% {
+    transform: rotate(180deg) scale(1.5);
+    border-radius: 50%;
+  }
+  100% {
+    transform: rotate(360deg) scale(0.2);
+    border-radius: 10%;
+  }
+}
+  
